--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,75 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --main-background:#1c262b;
+  --secondary-background:#36434A;
+  --yellow-hover:#E3A750;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  margin: 0;
+  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  background-color: var(--main-background);
+}
+
+.searchContainer {
+  width: 100%;
+  height: 150px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.searchWrapper {
+  position: relative;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+.searchBar {
+  height: 2.25rem;
+  width: 18rem;
+  color: #fafafa;
+
+  border: none;
+  border-radius: 6px;
+  padding-left: 10px;
+  background-color: var(--secondary-background);
+}
+
+.searchBtn {
+  position: absolute;
+  right: 1px;
+  height: 2.25rem;
+  width: 2.25rem;
+
+  border: none;
+  border-radius: 0 6px 6px 0;
+  background-color: var(--secondary-background);
+}
+
+.searchBtn:hover {
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  background-color: var(--yellow-hover);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.itemContainer {
+  height: 100px;
+  width: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+
+  text-align: center;
+  gap: 0.25rem;
+  padding: 5px;
+}
+
+.itemContainer p {
+  line-height: 1rem;
 }
