--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,28 @@ body {
   background-color: var(--main-background);
 }
 
+.titleContainer {
+  width: 20%;
+}
+
+.title > span {
+  color: var(--yellow-hover);
+  padding-right: 8px;
+  font-weight: 600;
+}
+
+.title {
+  color: #fafafa95;
+  font-size: 24px;
+  font-weight: 400;
+  padding-top: 25px;
+  padding-left: 60px;
+  line-height: 2rem;
+}
+
 .searchContainer {
   width: 100%;
-  height: 150px;
+  height: 120px;
   display: flex;
   justify-content: center;
   align-items: center;
