--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
   --secondary-background:#36434A;
   --secondary-hover:#425057;
   --yellow-hover:#E3A750;
+
+  --main-text: #fafafa95;
 }
 
 * {
@@ -18,10 +20,6 @@ body {
   background-color: var(--main-background);
 }
 
-.titleContainer {
-  width: 20%;
-}
-
 .title > span {
   color: var(--yellow-hover);
   padding-right: 8px;
@@ -29,7 +27,7 @@ body {
 }
 
 .title {
-  color: #fafafa95;
+  color: var(--main-text);
   font-size: 24px;
   font-weight: 400;
   padding-top: 25px;
@@ -37,9 +35,16 @@ body {
   line-height: 2rem;
 }
 
+.searchArea {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .searchContainer {
   width: 100%;
-  height: 120px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -52,12 +57,17 @@ body {
 .searchBar {
   height: 2.25rem;
   width: 18rem;
-  color: #fafafa;
+  color: var(--main-text);
 
   border: none;
   border-radius: 6px;
   padding-left: 10px;
   background-color: var(--secondary-background);
+}
+
+.searchBar:focus {
+  outline: none;
+  border: 1px solid #E3A750;
 }
 
 .searchBtn {
@@ -68,37 +78,12 @@ body {
 
   border: none;
   border-radius: 0 6px 6px 0;
-  background-color: var(--secondary-background);
+  background-color: transparent;
 }
 
 .searchBtn:hover {
   cursor: pointer;
   background-color: var(--yellow-hover);
-}
-
-.gridArea {
-  width: 100%;
-  height: max-content;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 0.2rem;
-}
-
-.gridRow {
-  display: grid;
-  grid-template-columns: repeat(8, 0.25fr);
-  gap: 0.2rem;
-}
-
-.slot {
-  width: 100px;
-  height: 100px;
-  background-color: var(--secondary-background);
-}
-
-.slot:hover {
-    background-color: var(--secondary-hover);
 }
 
 .itemContainer {
