--- a/src/components/Grid/Grid.css
+++ b/src/components/Grid/Grid.css
@@ -46,6 +46,16 @@
 
 .removeItem {
   position: absolute;
-  top: 2px;
+  top: 3px;
   right: 3px;
+  opacity: 0;
+}
+
+.removeItem:hover {
+  color: #fafafa70;
+}
+
+.bankTile:hover .removeItem {
+  display: block;
+  opacity: 1;
 }
