--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -6,11 +6,8 @@
 }
 
 .searchContainer {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 40px;
 }
 
 .searchWrapper {
@@ -33,7 +30,7 @@
 
 .searchBar:focus {
   outline: none;
-  border: 1px solid #E3A750;
+  border: 1px solid var(--yellow);
 }
 
 .searchBtn {
@@ -62,7 +59,6 @@
   border-radius: 6px;
 
   position: absolute;
-  top: 2.2rem;
   z-index: 1;
 }
 
